# ChangeLog for www-client/surfraw
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/surfraw/ChangeLog,v 1.14 2007/12/25 15:23:05 phreak Exp $

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing seemant from metadata.xml as per #202469. Assigning to
  maintainer-needed.

  13 Oct 2007; Seemant Kulleen <seemant@gentoo.org> -surfraw-2.1.1.ebuild,
  -surfraw-2.1.4.ebuild, surfraw-2.1.5.ebuild:
  no more linking to compressed manpages. Thanks to James for the report and
  the fix.

  22 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  surfraw-2.1.5.ebuild:
  Stable on ppc wrt bug #158484.

  20 Dec 2006; Steve Dibb <beandog@gentoo.org> surfraw-2.1.5.ebuild:
  amd64 stable, bug 158484

  19 Dec 2006; Christian Faulhammer <opfer@gentoo.org> surfraw-2.1.5.ebuild:
  stable x86, bug #158484

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> surfraw-2.1.5.ebuild:
  Stable on sparc wrt #158484

*surfraw-2.1.5 (20 Oct 2006)

  20 Oct 2006; Seemant Kulleen <seemant@gentoo.org>
  +files/surfraw-2.1.5-gentoo_pkg_tools.patch, +surfraw-2.1.5.ebuild:
  Version bump thanks to James Rowe in bug #150945

  06 Jun 2006; Seemant Kulleen <seemant@gentoo.org> metadata.xml:
  Added long description, thanks to James in bug #135489

*surfraw-2.1.4 (31 Mar 2006)

  31 Mar 2006; Seemant Kulleen <seemant@gentoo.org> -surfraw-2.1.0.1.ebuild,
  +surfraw-2.1.4.ebuild:
  Version bump, thanks to Jay in bug #127549

*surfraw-2.1.1 (19 Oct 2005)

  19 Oct 2005; Seemant Kulleen <seemant@gentoo.org>
  +files/surfraw-gentoo_pkg_tools.patch, -surfraw-2.0.2.1.ebuild,
  surfraw-2.1.0.1.ebuild, +surfraw-2.1.1.ebuild:
  version bump, thanks to James Rowe (the real maintainer) in bug #109330

*surfraw-2.1.0.1 (10 May 2005)

  10 May 2005; Seemant Kulleen <seemant@gentoo.org> +surfraw-2.1.0.1.ebuild:
  Version bump thanks to: James Rowe <jnrowe@ukfsn.org> in bug #90968

*surfraw-2.0.2.1 (19 Apr 2005)
